--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.12",
 		"clsx": "2.1.1",
+		"docspresso": "^0.1.2",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
